[package]
name = "tool-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Rhai-based tool orchestration for AI agents - implements Anthropic's programmatic tool calling pattern"
license = "MIT"
authors = ["Brainwires Team"]
keywords = ["ai", "agent", "tools", "orchestration", "rhai"]
repository = "https://github.com/Brainwires/tool-orchestrator"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
# Native mode: thread-safe with Arc/Mutex and std::time
native = ["rhai/sync"]
# WASM mode: single-threaded with Rc/RefCell and instant crate
wasm = [
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "serde-wasm-bindgen",
    "instant",
    "getrandom/js",
    "console_error_panic_hook",
]

[dependencies]
# Embedded scripting engine (pure Rust)
# Note: "sync" feature is enabled via "native" feature for thread-safety
rhai = { version = "1.20", default-features = false, features = ["serde", "std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging (always available, zero-cost when not used)
tracing = "0.1"

# === WASM-only dependencies ===
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }
getrandom = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
